--- a/guanyuwomen.html
+++ b/guanyuwomen.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>我要理财</title>
+	<title>关于我们</title>
 	<link rel="stylesheet" type="text/css" href="./css/renrendai.css">
 </head>
 <body>
@@ -37,32 +37,58 @@
 				<p class="container">尊敬的用户：10月14日品牌升级后，理财端WE.COM为理财人提供专业的理财服务，借款端renrendai.com为借款人提供借款服务。</p>
 			</div>
 		</div>
-		<!-- 升级登录板块 -->
-		<div class="sjdl">
-			<div class="dl">
-				<a href="#" target="_blank">立即体验</a>
+		<div class="about">
+		<div class="about-m container">
+			<div class="about-m-l">
+				<ul>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>创始团队</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+					<a href="#"><li>公司简介</li></a>
+				</ul>
 			</div>
+			<div class="about-m-r">
+				<div class="about-m-rt">
+					<h2>创始团队</h2>
+					<p>人人贷以普惠金融的梦想及互联网金融创新的基因凝聚了一批充满阳光、活力和进取精神的行业精英，他们成为了伟大梦想脚踏实地的践行者。</p>
+				</div>
+				<div class="about-m-intro">
+					<div class="about-m-peo">
+						<img src="./images/zhangshishi.jpg" alt="">
+						<dl>
+							<dt>张适时</dt>
+							<dd>毕业于清华大学经济管理学院金融系。毕业后背包旅行8个多月，游历包括南极在内的30多个国家和地区。2008年就职于香港Temujin私募基金，后在家族企业富山矿业集团工作，往返新疆内蒙等地。<br/>2010年，与合伙人共同创建互联网信贷服务平台-人人贷。</dd>
+						</dl>
+						<p class="clear"></p>
+					</div>
+					<div class="about-m-peo">
+						<img src="./images/zhangshishi.jpg" alt="">
+						<dl>
+							<dt>张适时</dt>
+							<dd>毕业于清华大学经济管理学院金融系。毕业后背包旅行8个多月，游历包括南极在内的30多个国家和地区。2008年就职于香港Temujin私募基金，后在家族企业富山矿业集团工作，往返新疆内蒙等地。<br/>2010年，与合伙人共同创建互联网信贷服务平台-人人贷。</dd>
+						</dl>
+						<p class="clear"></p>
+					</div>
+					<div class="about-m-peo">
+						<img src="./images/zhangshishi.jpg" alt="">
+						<dl>
+							<dt>张适时</dt>
+							<dd>毕业于清华大学经济管理学院金融系。毕业后背包旅行8个多月，游历包括南极在内的30多个国家和地区。2008年就职于香港Temujin私募基金，后在家族企业富山矿业集团工作，往返新疆内蒙等地。<br/>2010年，与合伙人共同创建互联网信贷服务平台-人人贷。</dd>
+						</dl>
+						<p class="clear"></p>
+					</div>
+				</div>
+			</div>
+			<p class="clear"></p>
 		</div>
-		<div class="sj-con container">
-			<dl>
-          		<dt>人人贷理财品牌全面升级！</dt>
-          		<dd>
-            	Wealth Evolution （简称<a target="_blank" href="#">WE.COM</a>），原人人贷平台(<a href="#">renrendai.com</a>)理财端的升级，将<br>为广大理财用户提供更多元的投资选择与更优质的综合理财服务。<br>
-				您可以继续使用原有账号和密码登录<a target="_blank" href="#">WE.COM</a>，同时， 人人贷（<a href="#">renrendai.com</a>）将<br>继续为借款端用户提供借款服务。<br>
-				全面升级，全新体验，即刻从点击<a target="_blank" href="#">WE.COM</a>开始吧！
-          		</dd>
-        	</dl>
-		</div>
-		<!-- 用户须知 -->
-		<div class="ntk container">
-			<h2>&nbsp;用户须知&nbsp;</h2>
-			<ul>
-				<li>所有已在人人贷网站（<a href="#">renrendai.com</a>）进行过资金出借，以及虽未有过交易记录但注册账户时选择了“我要理财”的用户（统称“理财用户”），需要通过WE.COM理财平台登录账户，登录用户名和密码不变。</li>
-				<li>所有已在人人贷网站（<a href="#">renrendai.com</a>）进行过资金出借，以及虽未有过交易记录但注册账户时选择了“我要理财”的用户（统称“理财用户”），需要通过WE.COM理财平台登录账户，登录用户名和密码不变。</li>
-				<li>所有已在人人贷网站（<a href="#">renrendai.com</a>）进行过资金出借，以及虽未有过交易记录但注册账户时选择了“我要理财”的用户（统称“理财用户”），需要通过WE.COM理财平台登录账户，登录用户名和密码不变。</li>
-				<li>所有已在人人贷网站（<a href="#">renrendai.com</a>）进行过资金出借，以及虽未有过交易记录但注册账户时选择了“我要理财”的用户（统称“理财用户”），需要通过WE.COM理财平台登录账户，登录用户名和密码不变。</li>
-				<li>所有已在人人贷网站（<a href="#">renrendai.com</a>）进行过资金出借，以及虽未有过交易记录但注册账户时选择了“我要理财”的用户（统称“理财用户”），需要通过WE.COM理财平台登录账户，登录用户名和密码不变。</li>
-			</ul>
 		</div>
 		<!-- 固定的地址 -->
 		<div class="footer">
