--- a/xinshouzhiyin.html
+++ b/xinshouzhiyin.html
@@ -24,11 +24,11 @@
 				<div class="slogan"></div>
 				<div class="nar-t">
 					<ul>
-						<li><a href="#">首页</a></li>
-						<li><a href="#">我要理财</a></li>
+						<li><a href="renrendai.html">首页</a></li>
+						<li><a href="woyaolicai.html">我要理财</a></li>
 						<li><a href="#">我要借款</a></li>
-						<li><a href="#">新手指引</a></li>
-						<li><a href="#">关于我们</a></li>
+						<li><a href="xinshouzhiyin.html">新手指引</a></li>
+						<li><a href="guanyuwomen.html">关于我们</a></li>
 					</ul>
 				</div>
 				<p class="clear"></p>
